--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     font-family: 'Wix Madefor Display', sans-serif;">
     <div class="valutico1"></div>
     <div class="Home">Home</div>
-    <div class="Solutions">Solutions</div>
-    <div class="YourWork">Your Work</div>
-    <div class="Company">Company</div>
+    <div class="Solutions">Solutions <div class="dropdown" ><img src="dropdown.png"></div></div>
+    <div class="YourWork">Your Work<div class="dropdown" ><img src="dropdown.png"></div></div>
+    <div class="Company">Company<div class="dropdown" ><img src="dropdown.png"></div></div>
     <div class="RequestaDemo">Request a Demo
       <div class="Vector1"></div>
     </div>
