--- a/index.html
+++ b/index.html
@@ -12,30 +12,35 @@
 </head>
      
 <body>
-      <div class="newfigma1" font-type="font-family: 'Caveat', cursive;
-    font-family: 'Manrope', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Wix Madefor Display', sans-serif;">
+  
+        <div class="newfigma1" font-type="font-family: 'Caveat', cursive;
+        font-family: 'Manrope', sans-serif;
+        font-family: 'Roboto', sans-serif;
+        ont-family: 'Wix Madefor Display', sans-serif;">
         <div class="valutico1"></div>
         <div class="Home">Home</div>
         <div class="Solutions">Solutions <div class="dropdown" ><img src="dropdown.png"></div></div>
         <div class="YourWork">Your Work<div class="dropdown" ><img src="dropdown.png"></div></div>
         <div class="Company">Company<div class="dropdown" ><img src="dropdown.png"></div></div>
         <div class="RequestaDemo">Request a Demo
-          <div class="Vector1"></div>
-      </div>
-    <h1 class="WorldLeading">The World's Leading Business Valuation Software</h1>
-    <p class="Valuticoprovides">Valutico provides the financial services industry and valuation experts with data-driven tools to perform accurate company valuations faster and more accurately than ever before.</p>
-          <div class="RequestaDemoAgain">Request a Demo
           <div class="Vector2"></div>
-          </div>
-          <div class="SignUp">Sign Up/Login</div>
-          <div class="valuticobox"><img src="valuticobox.png" alt="Valutico Sample"></div> 
-          <div class="trustedby"><div class="trustedbox"><div class="trustedtext">Trusted by Hundreds of Financial Firms in 75 Countries</div> <div class="OurTeamtext">Our team of more than 50 employees is globally distributed and serves both national and international clients in over 75 countries.</div></div>
+        </div>
+      <h1 class="WorldLeading">The World's Leading Business Valuation Software</h1>
+      <p class="Valuticoprovides">Valutico provides the financial services industry and valuation experts with data-driven tools to perform accurate company valuations faster and more accurately than ever before.</p>
+           <div class="RequestaDemoAgain">Request a Demo
+            <div class="Vector2"></div>
+            </div>
+            <div class="SignUp">Sign Up/Login</div>
+            <div class="valuticobox"><img src="valuticobox.png" alt="Valutico Sample"></div> 
+          <div class="trustedby">
+            <div class="trustedbox">
+              <div class="trustedtext">Trusted by Hundreds of Financial Firms in 75 Countries</div> 
+              <div class="OurTeamtext">Our team of more than 50 employees is globally distributed and serves both national and international clients in over 75 countries.</div>
+            </div>
         <div class="companylist">
           <div class="row1">
-            <div id="Allinial" style="height: 117px; background-color: #F9F9F9;"><img src="Allinial.png"></div>
-            <div id="Oaklins" style="height: 117px; background-color: #F9F9F9;"><img src="Oaklins.png"></div>
+            <div id="Allinial" style=" background-color: #F9F9F9;"><img src="Allinial2.png"></div>
+            <div id="Oaklins" style=" background-color: #F9F9F9;"><img src="Oaklins.png"></div>
             <div id="RusellBedford"><img src="RusellBedford.png"></div>
             <div id="Crowe"><img src="Crowe.png"></div>
           </div>
@@ -51,27 +56,27 @@
             <div id="cdi"><img src="cdi.png"></div>
             <div id="Rodl"><img src="Rodl.png"></div>
           </div>
-    </div>
-    </div>
+      </div>
+  
     
     <div class="whyvaluticoframe">
       <div class="whyvaluticobox">
         <div class="whyvaluticoheader">
           <div class="whyvalutico">Why Valutico?</div>
-          <div class="anawardwinning">An award-winning fintech providing a range of company valuation solutions, Valutico provides the financial services industry and valuation experts with data-driven tools.</div> 
+          <div class="anawardwinning">An award-winning fintech providing a range of company valuation solutions, Valutico provides the<br>financial services industry and valuation experts with data-driven tools.</div> 
         </div>
         <div class="list">
             <div class="securebox">
               <div class="secure">Secure</div>
-              <div class="privatebydefault">Private by default, creating a safe space around your projects and your data.</div>
+              <div class="privatebydefault">Private by default, creating a safe space<br> around your projects and your data.</div>
             </div>
             <div class="reliablebox">
               <div class="reliable">Reliable</div>
-              <div class="createdby">Created by valuation experts for valuation professionals.</div>
+              <div class="createdby">Created by valuation experts for valuation<br> professionals.</div>
             </div>
             <div class="dedicatedbox">
               <div class="dedicated">Dedicated to your success</div>
-              <div class="two47">24/7 support and multi-language capabilities to support your needs</div>
+              <div class="two47">24/7 support and multi-language capabilities<br> to support your needs</div>
             </div>
           </div>
       </div>
@@ -79,7 +84,7 @@
     <div class="valuticofooterframe">
       <div class="Requestfooterframe"></div>
         <div class="requestaDemoFooter">Request a Demo
-          <div class="Vector2"></div>
+          <div class="Vector1"></div>
         </div>
         <div class="innerfooterframe">
           <div class="footertextframe">
@@ -120,7 +125,8 @@
     </div>
  
   
-  </div>
+    </div>
+ 
    
 
 </body>
